--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                         <div class="row tasks">
                             <ul class="col l-12 m-12 c-12" id='task'>
-                                <li class="note-item"> 
+                                <!-- <li class="note-item"> 
                                     <div class="row">
                                         <span class="col l-10 m-10 c-10" id="task-item">ghi chu 1</span>
                                         <input class="col l-1 m-1 c-1 task-check" type="checkbox" name="checked"> 
@@ -48,7 +48,7 @@
                                         <input class="col l-1 m-1 c-1 task-check" type="checkbox" name="checked"> 
                                         <i class="fas fa-trash-alt col l-1 m-1 c-1 trash"></i>
                                     </div>
-                                </li> 
+                                </li>  -->
                         </div>
 
                        
