--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
             </div>
         </div>
     </div>
+
+    <footer class="footer">
+        <p>Copyright &copy; by Loc Tran - 2020</p>
+    </footer>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./jquery.js"></script>
